data/documentations/numpy/numpy/typing/tests/data/fail/datasource_pyi.comment
['text':' E: incompatible type','line_number':7,'multiline':False]
['text':' E: incompatible type','line_number':8,'multiline':False]
['text':' E: incompatible type','line_number':10,'multiline':False]
['text':' E: incompatible type','line_number':11,'multiline':False]
['text':' E: incompatible type','line_number':13,'multiline':False]
['text':' E: incompatible type','line_number':14,'multiline':False]
['text':' E: incompatible type','line_number':15,'multiline':False]
